--- a/src/App.css
+++ b/src/App.css
@@ -128,6 +128,10 @@ a:hover {
   left: 15rem;
 }
 
+.humburger {
+  display: none;
+}
+
 @keyframes lively {
   from {
     transform: translateY(-2rem);
@@ -209,6 +213,7 @@ a:hover {
     top: 5rem;
   }
   header .humburger {
+    display: block;
     position: relative;
     width: 5rem;
     height: 5rem;
@@ -249,7 +254,7 @@ a:hover {
   }
 
   #text {
-    top: 70%;
+    top: 68%;
     left: 50%;
     transform: translate(-50%, -50%);
   }
@@ -261,28 +266,29 @@ a:hover {
     justify-content: center;
   }
   #text .w-40 h3 {
-    font-size: 1.8rem;
+    font-size: 2rem;
   }
   #text .w-40 h1 {
-    font-size: 3rem;
+    font-size: 4rem;
   }
   #text .w-40 button {
     font-size: 1.4rem;
   }
   #text .w-40 p {
-    display: none;
+    width: 80%;
+    margin-bottom: 1rem !important;
   }
 
   .circle {
-    width: 20rem;
-    height: 20rem;
-    top: 20%;
+    width: 30rem;
+    height: 30rem;
+    top: 16%;
     left: 50%;
     transform: translateX(-50%);
   }
-  .circle .product-img {
+  .circle .product-img.responsive {
     width: 100%;
-    top: 0;
+    top: -5rem;
     left: 0;
   }
 }
@@ -302,6 +308,9 @@ a:hover {
     margin-bottom: 1rem !important;
     font-size: 2.4rem;
   }
+  #text .w-40 p {
+    display: none;
+  }
   #text .w-40 button {
     font-size: 1.2rem;
     padding: 1rem 5rem !important;
@@ -314,7 +323,7 @@ a:hover {
     left: 50%;
     transform: translateX(-50%);
   }
-  .circle .product-img {
+  .circle .product-img.responsive {
     width: 90%;
     top: 0;
     left: 0;
@@ -322,6 +331,7 @@ a:hover {
 
   #select-img {
     margin-bottom: 0 !important;
+    bottom: 0.5rem;
   }
   #select-img .link-img {
     width: 15%;
@@ -333,6 +343,91 @@ a:hover {
   }
   .circle .product-img {
     width: 30%;
+  }
+}
+@media screen and (width: 568px) {
+  #select-img {
+    flex-flow: column;
+  }
+  #select-img .link-img {
+    width: 5%;
+  }
+
+  .circle {
+    left: 40%;
+  }
+  .circle .product-img.responsive {
+    width: 75%;
+  }
+
+  #text {
+    left: 72%;
+  }
+}
+@media screen and (width: 812px) {
+  #select-img {
+    flex-flow: column;
+    top: 12rem;
+    margin-left: 3rem;
+  }
+  #select-img .link-img {
+    width: 5%;
+  }
+
+  .circle {
+    width: 50rem;
+    height: 50rem;
+    top: 21%;
+    right: -15%;
+  }
+  .circle .product-img.responsive {
+    width: 40%;
+    top: 0;
+    left: 5rem;
+  }
+
+  #text {
+    left: 20%;
+    top: 56%;
+  }
+  #text p {
+    display: none;
+  }
+  #text .w-40 {
+    width: 100%;
+  }
+}
+@media screen and (width: 736px) {
+  #select-img {
+    flex-flow: column;
+    top: 12rem;
+    margin-left: 3rem;
+  }
+  #select-img .link-img {
+    width: 5%;
+  }
+
+  .circle {
+    width: 50rem;
+    height: 50rem;
+    top: 21%;
+    right: -15%;
+  }
+  .circle .product-img.responsive {
+    width: 40%;
+    top: 0;
+    left: 5rem;
+  }
+
+  #text {
+    left: 20%;
+    top: 56%;
+  }
+  #text p {
+    display: none;
+  }
+  #text .w-40 {
+    width: 100%;
   }
 }
 
