--- a/src/App.scss
+++ b/src/App.scss
@@ -144,6 +144,9 @@ a {
   left: 15rem;
 }
 
+.humburger {
+  display: none;
+}
 
 
 ////////////////////////////////////////////////-----------ANIMATION-----------/////////////////////////////////////
@@ -233,6 +236,7 @@ a {
       }
     }
     .humburger {
+      display: block;
       position: relative;
       width: 5rem;
       height: 5rem;
@@ -274,7 +278,7 @@ a {
     }
   }
   #text {
-    top: 70%;
+    top: 68%;
     left: 50%;
     transform: translate(-50%, -50%);
     .w-40 {
@@ -284,29 +288,30 @@ a {
       align-items: center;
       justify-content: center;
       h3 {
-        font-size: 1.8rem;
+        font-size: 2rem;
       }
       h1 {
-        font-size: 3rem;
+        font-size: 4rem;
       }
       button {
         font-size: 1.4rem;
       }
       p {
-        display: none;
+        width: 80%;
+        margin-bottom: 1rem!important;
       }
     }
     
   }
   .circle {
-    width: 20rem;
-    height: 20rem;
-    top: 20%;
+    width: 30rem;
+    height: 30rem;
+    top: 16%;
     left: 50%;
     transform: translateX(-50%);
-    .product-img {
+    .product-img.responsive {
       width: 100%;
-      top: 0;
+      top: -5rem;
       left: 0;
     }
   }
@@ -330,6 +335,9 @@ a {
         margin-bottom: 1rem!important;
         font-size: 2.4rem;
       }
+      p {
+        display: none;
+      }
       button {
         font-size: 1.2rem;
         padding: 1rem 5rem!important;
@@ -342,7 +350,7 @@ a {
     top: 15%;
     left: 50%;
     transform: translateX(-50%);
-    .product-img {
+    .product-img.responsive {
       width: 90%;
       top: 0;
       left: 0;
@@ -351,6 +359,7 @@ a {
 
   #select-img {
     margin-bottom: 0!important;
+    bottom: .5rem;
     .link-img {
       width: 15%;
     }
@@ -367,5 +376,87 @@ a {
    .product-img {
      width: 30%;
    }
+  }
+}
+
+@media screen and (width: 568px) {
+  #select-img {
+    flex-flow: column;
+    .link-img {
+      width: 5%;
+    }
+  }
+  .circle {
+    left:40%;
+    .product-img.responsive {
+      width: 75%;
+    }
+  } 
+  #text {
+    left: 72%
+  }
+}
+
+@media screen and (width: 812px)  {
+  #select-img {
+    flex-flow: column;
+    top : 12rem;
+    margin-left: 3rem;
+    .link-img {
+      width: 5%;
+    }
+  }
+  .circle {
+    width: 50rem;
+    height: 50rem;
+    top: 21%;
+    right: -15%;
+    .product-img.responsive {
+      width: 40%;
+      top: 0;
+      left: 5rem;
+    }
+  } 
+  #text {
+    left: 20%;
+    top: 56%;
+    p {
+      display: none;
+    }
+    .w-40 {
+      width: 100%;
+    }
+  }
+}
+
+@media screen and (width: 736px)  {
+  #select-img {
+    flex-flow: column;
+    top : 12rem;
+    margin-left: 3rem;
+    .link-img {
+      width: 5%;
+    }
+  }
+  .circle {
+    width: 50rem;
+    height: 50rem;
+    top: 21%;
+    right: -15%;
+    .product-img.responsive {
+      width: 40%;
+      top: 0;
+      left: 5rem;
+    }
+  } 
+  #text {
+    left: 20%;
+    top: 56%;
+    p {
+      display: none;
+    }
+    .w-40 {
+      width: 100%;
+    }
   }
 }
